Fixed bug chat overflow

--- a/assets/front_end_assets/css/quotation_detail.css
+++ b/assets/front_end_assets/css/quotation_detail.css
@@ -82,6 +82,10 @@
     margin-bottom: 5vh;
 }
 
+.word-wrap{ 
+  word-wrap: break-word;
+}
+
 @media screen and (max-width: 480px) {
     .detail img {
         position: relative;
@@ -97,5 +101,8 @@
         white-space: nowrap;
         overflow-x: scroll;
         overflow-y: hidden;
+    }
+    .word-wrap{
+      width: 56vw;
     }
 }
